--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "prestart": "cd client && npm install && npm run build",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
